# backer

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  SETUP.md  cppcheck-report.txt  cppcheck-suppressions.txt  docker-bake.hcl  docker-compose.yml
.claude/commands/: gui-style.md  image-prompts.md  implement-feature.md  test-features.md  update-info.md
.claude/commands/git/: create-branch.md  git-commit.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml
.github/workflows/: ci.yml  docker-publish.yml  publish-release.yml
cmake/: FetchQt6.cmake
docs/: architecture-design.md  linux-setup-guide.md  ppt.md  reportDetails.md  requirements.md  subsystem-01-user-interface.puml  subsystem-03-compression.puml  subsystem-07-fs-abstraction.puml  subsystem-08-scheduler.puml  technology-selection.md  usage-gui-verify.md  usage.md  任务状态图.puml  使用文档.md  备份顺序图.puml  子系统一-用户接口用例图.puml  子系统七-文件系统抽象用例图.puml  子系统三-压缩用例图.puml  子系统二-核心引擎构件图.puml  子系统二-核心引擎用例图.puml  子系统五-打包构件图.puml  子系统五-打包用例图.puml  子系统八-调度用例图.puml  子系统六-过滤构件图.puml  子系统六-过滤用例图.puml  子系统四-加密构件图.puml  子系统四-加密用例图.puml  顶层系统构件图.puml  顶层系统用例图.puml
docs/diagrams/src/: class.puml  component.puml  layers.puml  sequence-backup.puml  use-case.puml
docs/exported/: subsystem-01-user-interface.md  subsystem-02-core-engine.md  subsystem-03-compression.md  subsystem-04-encryption.md  subsystem-06-filter.md
docs/plans/: 01-core-backup-restore.md  02-special-files.md  03-metadata.md  04-filtering.md  05-packing.md  06-compression.md  07-encryption.md  08-gui.md  09-scheduled-backup.md  10-realtime-backup.md  11-network-backup.md  README.md
docs/动态建模图/: 任务状态图.md  备份顺序图.md
docs/构件图/: 子系统七-文件系统抽象构件图.md  子系统五-打包构件图.md  子系统八-调度构件图.md  顶层系统构件图.md
docs/用例图/: 子系统一-用户接口用例图.md  子系统七-文件系统抽象用例图.md  子系统三-压缩用例图.md  子系统二-核心引擎用例图.md  子系统五-打包用例图.md  子系统八-调度用例图.md  子系统六-过滤用例图.md  子系统四-加密用例图.md  顶层系统用例图.md
scripts/: build-docker.sh  build-gui.sh  run-gui.sh  setup-qt6.sh  setup-testdata.sh  setup.sh  test-backup-restore.sh
src/: main.cpp
src/cli/: commands.cpp  commands.h
src/compress/: build_compressor.cpp  build_compressor.h  compressor.h  gzip_compressor.cpp  gzip_compressor.h  lzma_compressor.cpp  lzma_compressor.h  zstd_compressor.cpp  zstd_compressor.h
src/core/: backup_engine.cpp  backup_engine.h  error_code.h  expected.h  restore_engine.cpp  restore_engine.h  span.h  types.h
src/crypto/: build_encryptor.cpp  build_encryptor.h  encrypted_format.h  encryptor.h  key_derivation.cpp  key_derivation.h  openssl_encryptor.cpp  openssl_encryptor.h
src/filters/: criteria_filter.cpp  criteria_filter.h  filter.h
src/fs/: fs_abstraction.cpp  fs_abstraction.h  metadata.cpp  metadata.h  path_mapper.cpp  path_mapper.h  platform.h  special_file.cpp  special_file.h
src/gui/: backup_tab.cpp  backup_tab.h  backup_worker.cpp  backup_worker.h  filter_dialog.cpp  filter_dialog.h  gui_style.cpp  gui_style.h  gui_utils.h  log_widget.cpp  log_widget.h  main.cpp  main_window.cpp  main_window.h  progress_widget.cpp  progress_widget.h  restore_tab.cpp  restore_tab.h  schedule_tab.cpp  schedule_tab.h  settings_tab.cpp  settings_tab.h
src/gui/resources/: app.qrc
src/pack/: packer.h  tar_packer.cpp  tar_packer.h  zip_packer.cpp  zip_packer.h
src/scheduler/: backup_scheduler.cpp  backup_scheduler.h  retention_policy.cpp  retention_policy.h  schedule_store.cpp  schedule_store.h
src/storage/: local_storage.cpp  local_storage.h  storage.h
testdata/special/: link.txt
tests/compress/: compressor_factory_test.cpp  compressor_test.cpp  compressor_test.h
tests/core/: backup_engine_test.cpp  restore_engine_test.cpp
tests/crypto/: encryptor_factory_test.cpp  encryptor_test.h  openssl_encryptor_test.cpp
tests/filter/: criteria_filter_test.cpp
tests/fs/: metadata_test.cpp  special_file_test.cpp
tests/pack/: tar_packer_test.cpp  zip_packer_test.cpp
tests/scheduler/: backup_scheduler_test.cpp  ccronexpr_test.cpp  retention_policy_test.cpp
